--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,13 @@
 *.log
 *.pyc
 *.swp
+*.bak
 .DS_Store
 .atom/
 .buildlog/
 .history
 .svn/
-migrate_working_dir/
+*.env
 
 # IntelliJ related
 *.iml
@@ -19,13 +20,22 @@ migrate_working_dir/
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-#.vscode/
+.vscode/
 
 # Flutter/Dart/Pub related
-# Libraries should not include pubspec.lock, per https://dart.dev/guides/libraries/private-files#pubspeclock.
-/pubspec.lock
 **/doc/api/
+**/ios/Flutter/.last_build_id
 .dart_tool/
+.flutter-plugins
 .flutter-plugins-dependencies
-/build/
-/coverage/
+.packages
+.pub-cache/
+.pub/
+/build/*
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+*.g.dart
