--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ version: 0.1.0
 homepage: https://github.com/MorozTeam/flutter_morozteam_ui
 repository: https://github.com/MorozTeam/flutter_morozteam_ui
 issue_tracker: https://github.com/MorozTeam/flutter_morozteam_ui/issues
+license: MIT
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -12,8 +13,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.0
-  webview_flutter: ^4.0.0
+  flutter_svg: any
+  webview_flutter: any
 
 dev_dependencies:
   flutter_test:
