--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,12 @@
 include: package:flutter_lints/flutter.yaml
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+exclude:
+  - "**/*.g.dart"
+  - "**/generated/**/*"
+
+linter:
+  rules:
+    constant_identifier_names: false
+    prefer_const_constructors: true
+    prefer_const_declarations: true
+    prefer_const_literals_to_create_immutables: true
