refactor: completely refactor MTAvatar component
- Remove all domain dependencies (User, WSMember, etc.)
- Add clean parameters: initials, avatarUrl, gravatarEmail, borderColor
- Implement layered image loading: initials → gravatar → custom URL → icon
- Add MD5 utility for Gravatar email hashing
- Use Jarvi's initials implementation with proper scaling
- Update example app with comprehensive avatar demos:
  * Initials only
  * Initials with border
  * Gravatar from email
  * Custom URL
  * Icon fallback
  * Different sizes
- Export MD5 utility in main package
- All tests pass

MTAvatar is now completely generic and configurable by consuming apps.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,16 @@ environment:
   flutter: ">=3.0.0"
 
 dependencies:
+  crypto: any
   flutter:
     sdk: flutter
   flutter_svg: any
   webview_flutter: any
 
 dev_dependencies:
+  flutter_lints: any
   flutter_test:
     sdk: flutter
-  flutter_lints: any
 
 # The following section is specific to Flutter packages.
 flutter:
