BREAKING: rename package from flutter_morozteam_ui to morozteam_ui
- Remove flutter_ prefix as this is a UI library, not a plugin
- Rename main library file: flutter_morozteam_ui.dart → morozteam_ui.dart
- Update all imports in example app and tests
- Update README.md installation instructions and examples
- Update example/pubspec.yaml dependency reference

BREAKING CHANGE: Users must update their pubspec.yaml and imports:
- pubspec.yaml: flutter_morozteam_ui → morozteam_ui
- imports: package:flutter_morozteam_ui/flutter_morozteam_ui.dart → package:morozteam_ui/morozteam_ui.dart

Repository and folder names remain unchanged.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_morozteam_ui:
+  morozteam_ui:
     path: ../
 
 dev_dependencies:
