Prepare for pub.dev publication
- Fix dependency versions in pubspec.yaml
- Update example analysis_options.yaml
- Remove LLM_PREPARE_FOR_PUBLISH.md

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,8 +1,8 @@
 include: package:flutter_lints/flutter.yaml
 
-exclude:
-  - "**/*.g.dart"
-  - "**/generated/**/*"
+formatter:
+  trailing_commas: preserve
+
 
 linter:
   rules:
