--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,13 +5,16 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.9.2 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   morozteam_ui:
     path: ../
+
+dev_dependencies:
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
